# tb3_yolo_pc

./: README.md  capture.sh  view_cam.sh  view_yolo.sh
docs/: 00_safety.md  01_robot.md  02_pc.md  03_yolo.md  yolo.md
src/capture/: CMakeLists.txt  package.xml
src/capture/src/: capture.cpp  viewer.cpp
train_yolo/: datasets.yaml  train_yolo.py
